--- a/Work#9/index.html
+++ b/Work#9/index.html
@@ -297,24 +297,80 @@
         </div>
         <div class="copy_rigth_site">
           <div class="img_facebook">
-            <div class="img_facebook_mask"> 
-              <img src="./img/facebook.svg" alt="Facebook" />
-            </div>
+            <!-- <div class="img_facebook_mask">  -->
+              <!-- <img src="./img/facebook.svg" alt="Facebook" /> -->
+              <svg width="9.932739" height="16.000000" viewBox="0 0 9.93274 16" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <desc>
+                  Created with Pixso.
+              </desc>
+              <defs>
+                <clipPath id="clip190_1378">
+                  <rect id="facebook-f-brands (3) 1" width="9.932734" height="16.000000" fill="white" fill-opacity="0"/>
+                </clipPath>
+              </defs>
+              <rect id="facebook-f-brands (3) 1" width="9.932734" height="16.000000" fill="#FFFFFF" fill-opacity="0"/>
+              <g clip-path="url(#clip190_1378)">
+                <path id="Vector" d="M8.16 8.28L8.58 5.61L5.96 5.61L5.96 3.88C5.96 3.15 6.32 2.44 7.5 2.44L8.69 2.44L8.69 0.17C8.69 0.17 7.61 0 6.57 0C4.42 0 3.01 1.27 3.01 3.58L3.01 5.61L0.62 5.61L0.62 8.28L3.01 8.28L3.01 14.72L5.96 14.72L5.96 8.28L8.16 8.28Z" fill="#000000" fill-opacity="1.000000" fill-rule="nonzero"/>
+              </g>
+              </svg>
+            <!-- </div> -->
           </div>
           <div class="img_instagramm">
-            <div class="img_instagramm_mask"> 
-              <img src="./img/instagram.svg" alt="Instagramm" />
-            </div>
+            <!-- <div class="img_instagramm_mask">  -->
+              <!-- <img src="./img/instagram.svg" alt="Instagramm" /> -->
+              <svg width="14.899048" height="17.000000" viewBox="0 0 14.899 17" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <desc>
+                    Created with Pixso.
+                </desc>
+                <defs>
+                  <clipPath id="clip190_1610">
+                    <rect id="instagram-brands 1" width="14.899101" height="17.000000" fill="white" fill-opacity="0"/>
+                  </clipPath>
+                </defs>
+                <rect id="instagram-brands 1" width="14.899101" height="17.000000" fill="#FFFFFF" fill-opacity="0"/>
+                <g clip-path="url(#clip190_1610)">
+                  <path id="Vector" d="M7.45 4.68C5.33 4.68 3.63 6.38 3.63 8.49C3.63 10.6 5.33 12.31 7.45 12.31C9.56 12.31 11.27 10.6 11.27 8.49C11.27 6.38 9.56 4.68 7.45 4.68ZM7.45 10.97C6.08 10.97 4.96 9.86 4.96 8.49C4.96 7.12 6.08 6.01 7.45 6.01C8.82 6.01 9.93 7.12 9.93 8.49C9.93 9.86 8.81 10.97 7.45 10.97ZM12.32 4.52C12.32 5.02 11.92 5.41 11.43 5.41C10.93 5.41 10.53 5.01 10.53 4.52C10.53 4.03 10.93 3.63 11.43 3.63C11.92 3.63 12.32 4.03 12.32 4.52ZM14.85 5.42C14.79 4.23 14.52 3.18 13.64 2.31C12.77 1.44 11.71 1.16 10.52 1.1C9.29 1.03 5.6 1.03 4.37 1.1C3.18 1.16 2.12 1.43 1.25 2.3C0.37 3.17 0.1 4.23 0.04 5.42C-0.03 6.65 -0.03 10.33 0.04 11.56C0.1 12.75 0.37 13.81 1.25 14.68C2.12 15.55 3.18 15.82 4.37 15.88C5.6 15.95 9.29 15.95 10.52 15.88C11.71 15.82 12.77 15.55 13.64 14.68C14.51 13.81 14.79 12.75 14.85 11.56C14.92 10.33 14.92 6.65 14.85 5.42ZM13.26 12.88C13 13.53 12.5 14.03 11.84 14.29C10.86 14.68 8.53 14.59 7.45 14.59C6.36 14.59 4.03 14.68 3.05 14.29C2.4 14.03 1.9 13.53 1.64 12.88C1.25 11.9 1.34 9.57 1.34 8.49C1.34 7.41 1.25 5.08 1.64 4.11C1.9 3.45 2.4 2.95 3.05 2.69C4.04 2.3 6.36 2.39 7.45 2.39C8.53 2.39 10.86 2.31 11.84 2.69C12.49 2.95 13 3.45 13.26 4.11C13.65 5.09 13.56 7.41 13.56 8.49C13.56 9.57 13.65 11.9 13.26 12.88Z" fill="#000000" fill-opacity="1.000000" fill-rule="nonzero"/>
+                </g>
+              </svg>
+            <!-- </div> -->
           </div>
           <div class="img_pinteres">
-            <div class="img_pinteres_mask"> 
-              <img src="./img/pinterest.svg" alt="Pinteres" />
-            </div>
+            <!-- <div class="img_pinteres_mask">  -->
+              <!-- <img src="./img/pinterest.svg" alt="Pinteres" /> -->
+              <svg width="11.919312" height="16.000000" viewBox="0 0 11.9193 16" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <desc>
+                    Created with Pixso.
+                </desc>
+                <defs>
+                  <clipPath id="clip190_1390">
+                    <rect id="pinterest-p-brands 1" width="11.919281" height="16.000000" fill="white" fill-opacity="0"/>
+                  </clipPath>
+                </defs>
+                <rect id="pinterest-p-brands 1" width="11.919281" height="16.000000" fill="#FFFFFF" fill-opacity="0"/>
+                <g clip-path="url(#clip190_1390)">
+                  <path id="Vector" d="M6.33 0.2C3.14 0.2 0 2.34 0 5.79C0 8 1.22 9.25 1.97 9.25C2.28 9.25 2.45 8.38 2.45 8.14C2.45 7.85 1.72 7.23 1.72 6.02C1.72 3.51 3.62 1.73 6.08 1.73C8.19 1.73 9.75 2.94 9.75 5.16C9.75 6.82 9.09 9.93 6.95 9.93C6.18 9.93 5.52 9.37 5.52 8.56C5.52 7.38 6.34 6.24 6.34 5.02C6.34 2.95 3.42 3.32 3.42 5.82C3.42 6.35 3.49 6.93 3.72 7.41C3.29 9.26 2.42 12.03 2.42 13.94C2.42 14.53 2.5 15.11 2.56 15.7C2.66 15.82 2.61 15.81 2.77 15.75C4.33 13.6 4.28 13.17 4.99 10.35C5.37 11.08 6.36 11.48 7.14 11.48C10.43 11.48 11.91 8.24 11.91 5.33C11.91 2.22 9.25 0.2 6.33 0.2Z" fill="#000000" fill-opacity="1.000000" fill-rule="nonzero"/>
+                </g>
+              </svg>
+            <!-- </div> -->
           </div>
           <div class="img_twwiter">
-            <div class="img_twwiter_mask"> 
-              <img src="./img/twitter1.svg" alt="Twwiter" />
-            </div>
+            <!-- <div class="img_twwiter_mask">  -->
+              <!-- <img src="./img/twitter1.svg" alt="Twwiter" /> -->
+              <svg width="15.892395" height="16.000000" viewBox="0 0 15.8924 16" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <desc>
+                    Created with Pixso.
+                </desc>
+                <defs>
+                  <clipPath id="clip190_1386">
+                    <rect id="twitter-brands 1" width="15.892374" height="16.000000" fill="white" fill-opacity="0"/>
+                  </clipPath>
+                </defs>
+                <rect id="twitter-brands 1" width="15.892374" height="16.000000" fill="#FFFFFF" fill-opacity="0"/>
+                <g clip-path="url(#clip190_1386)">
+                  <path id="Vector" d="M14.25 4.74C14.26 4.88 14.26 5.02 14.26 5.16C14.26 9.5 10.99 14.49 5 14.49C3.15 14.49 1.44 13.95 0 13.02C0.26 13.05 0.51 13.06 0.78 13.06C2.3 13.06 3.71 12.54 4.83 11.66C3.39 11.63 2.19 10.69 1.78 9.39C1.98 9.42 2.18 9.44 2.4 9.44C2.69 9.44 2.98 9.4 3.25 9.32C1.76 9.02 0.64 7.7 0.64 6.11L0.64 6.07C1.07 6.31 1.58 6.46 2.11 6.48C1.24 5.89 0.66 4.89 0.66 3.75C0.66 3.14 0.82 2.58 1.1 2.1C2.71 4.09 5.12 5.39 7.82 5.53C7.77 5.28 7.74 5.03 7.74 4.78C7.74 2.97 9.19 1.5 11 1.5C11.93 1.5 12.78 1.89 13.38 2.53C14.11 2.39 14.82 2.12 15.44 1.74C15.2 2.5 14.69 3.14 14.01 3.55C14.67 3.48 15.3 3.29 15.89 3.04C15.44 3.69 14.89 4.27 14.25 4.74Z" fill="#000000" fill-opacity="1.000000" fill-rule="nonzero"/>
+                </g>
+              </svg>
+            <!-- </div> -->
           </div>
         </div>
       </section>
