add form and ul, li

--- a/Work#10/index.html
+++ b/Work#10/index.html
@@ -53,36 +53,67 @@
           <div class="menu_category">
             <div class="menu_category_man">
               <a href="#" class="menu_title">MAN</a>
-              <div class="menu_list_man"> 
-                <a class="menu_link" href="#">Accessories</a>
-                <a class="menu_link" href="#">Bags</a>
-                <a class="menu_link" href="#">Denim</a>
-                <a class="menu_link" href="#">T-Shirts</a>
-              </div>
+              <ul class="menu_list_man"> 
+                <li>
+                  <a class="menu_link" href="#">Accessories</a>
+                </li>
+                <li>
+                  <a class="menu_link" href="#">Bags</a>
+                </li>
+                <li>
+                  <a class="menu_link" href="#">Denim</a>
+                </li>
+                <li>
+                  <a class="menu_link" href="#">T-Shirts</a>
+                </li>
+              </ul>
             </div>
             <div class="menu_category_women">
               <a href="#" class="menu_title">WOMEN</a>
-              <div class="menu_list_women">
-                <a class="menu_link" href="#">Accessories</a>
-                <a class="menu_link" href="#">Jackets & Coats</a>
-                <a class="menu_link" href="#">Polos</a>
-                <a class="menu_link" href="#">T-Shirts</a>
-                <a class="menu_link" href="#">Shirts</a>
-              </div>
+              <ul class="menu_list_women">
+                <li>
+                  <a class="menu_link" href="#">Accessories</a>
+                </li>
+                <li>
+                  <a class="menu_link" href="#">Jackets & Coats</a>
+                </li>
+                <li>
+                  <a class="menu_link" href="#">Polos</a>
+                </li>
+                <li>
+                  <a class="menu_link" href="#">T-Shirts</a>
+                </li>
+                <li>
+                  <a class="menu_link" href="#">Shirts</a>
+                </li>
+              </ul>
             </div>
             <div class="menu_category_kinds">
               <a href="#" class="menu_title">KIDS</a>
-              <div class="menu_list_kids">
-                <a class="menu_link" href="#">Accessories</a>
-                <a class="menu_link" href="#">Jackets & Coats</a>
-                <a class="menu_link" href="#">Polos</a>
-                <a class="menu_link" href="#">T-Shirts</a>
-                <a class="menu_link" href="#">Shirts</a>
-                <a class="menu_link" href="#">Bags</a>
-              </div>
+              <ul class="menu_list_kids">
+                <li>
+                  <a class="menu_link" href="#">Accessories</a>
+                </li>
+                <li>
+                  <a class="menu_link" href="#">Jackets & Coats</a>
+                </li>
+                <li>
+                  <a class="menu_link" href="#">Polos</a>
+                </li>
+                <li>
+                  <a class="menu_link" href="#">T-Shirts</a>
+                </li>
+                <li>
+                  <a class="menu_link" href="#">Shirts</a>
+                </li>
+                <li>
+                  <a class="menu_link" href="#">Bags</a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
+        
       </section>
     </header>
 
@@ -280,11 +311,13 @@
             <div class="box_down_rigth_elemetns">
               <h1 class="box_text_rigth_element_h1">SUBSCRIBE </h1>
               <h2 class="box_text_rigth_element_h2">FOR OUR NEWLETTER AND PROMOTION</h2>
-              <div class=" buttons_box_down">
-                <input class="input_button_1" type="text" placeholder="Enter Your Email" />
-                <!-- <button class="box_button_1"><h3 class="Enter_email_button_text">Enter Your Email</h3></button> -->
-                <button class="box_button_1"><h3 class="Subscribe_button_text">Subscribe</h3></button>
-              </div>
+              <form>
+                <div class=" buttons_box_down">
+                  <input class="input_button_1" type="text" placeholder="Enter Your Email" />
+                  <!-- <button class="box_button_1"><h3 class="Enter_email_button_text">Enter Your Email</h3></button> -->
+                  <button class="box_button_1"><h3 class="Subscribe_button_text">Subscribe</h3></button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
