--- a/Work#7/index.html
+++ b/Work#7/index.html
@@ -31,7 +31,7 @@
           </button>
         </div>
       </nav>
-      <section class="baner_backround">
+      <section class="baner_backround conteiner">
         <img
           class="banner_image"
           src="./img/head_baner_man.png"
