--- a/Work#10/index.html
+++ b/Work#10/index.html
@@ -35,7 +35,7 @@
         </div>
       </nav>
 
-      <section class="baner_backround">
+      <section class="baner_backround conteiner">
         <img
           class="banner_image"
           src="./img/head_baner_man.png"
